--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,7 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  @apply scroll-smooth;
+}
 
+.sm-button {
+  @apply bg-indigo-500 hover:bg-indigo-600 text-white font-medium px-3 py-1 rounded-lg;
+}
 
+.active-link-button {
+  @apply text-indigo-500 font-semibold;
+}
 
+/*!* scrollbar width *!*/
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
 
+/*!* scrollbar Track *!*/
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+/*!* scrollbar Handle *!*/
+::-webkit-scrollbar-thumb {
+  background: rgba(85, 85, 85, 0.3);
+  border-radius: 10px;
+}
